--- a/src/component/player.scss
+++ b/src/component/player.scss
@@ -11,10 +11,10 @@ justify-content: center;
 margin: auto;
 }
 .time{
-  position: relative;
+
 }
 .toggle{
-  position: static;
+  display: flex;
 }
 
 button {
