--- a/src/App.scss
+++ b/src/App.scss
@@ -1,73 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
-
-*{
-  margin: 0;
+body{
+  margin-top: 0px; 
+  margin-bottom: 0px; 
+  margin-left: 0px; 
+  margin-right: 0px;
   padding: 0;
-  box-sizing: border-box;
-  background-color: #f8c28c;
-  font-family: 'Poppins', sans-serif;
 }
-.App{
-  min-height: 100vh;
-}
-.App-header h2{
+
+.landing{
+  height: 100vh;
+  background-image: url('./images/aust3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
-  justify-content: center;
-  padding-top: 5vh;
   align-items: center;
-  font-weight: 200;
-  color: #902211;
-}
-
-.App-header h1{
-  display: flex;
   justify-content: center;
-  margin-bottom: 10vh;
-  align-items: center;
-  color: #230e0b;
-}
-
-
-.main {
-  display: flex;
   flex-direction: column;
-  .woman-wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-  #woman{
-    height: 300px;
-    width: 300px;
-    position: relative;
-    animation: mymove 5s ease infinite;
-  }
-  .ellipse{
-    background-color: #f8b186;
-    height: 50px;
-    width: 200px;
-    border-radius: 50%;
-    animation: shadow 5s ease-out infinite;
+  text-align: center;
+  h1{
+    margin-bottom: 50px;
+    color: white;
+    letter-spacing: 1rem;
   }
 }
-
-.bottom{
+.intro{
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
-  margin-left: 22vw;
-}
-.audio{
-  display: flex;
+  align-items: center;
   justify-content: center;
+  .intro-text{
+    color: #e3dde2;
+    font-size: 3rem;
+    font-weight: 900;
+    text-align: center;
+    .hide{
+      background-color: black;
+      overflow: hidden;
+      span{
+        transform: translateY(100%);
+        display: inline-block;
+      }
+    }
+  }
 }
-@keyframes mymove {
-    from {top: 0px;}
-    50% {top: -50px;}
-    to {top: 0px;}
-}
-@keyframes shadow{
-  from{width: 200px;}
-  50% {width: 150px;}
-  to {width: 200px;}
+.slider{
+  background-color: #e3dde2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
 }
 
+  
+.swiper-container {
+  width: 200px;
+}
+img{
+  height: 200px;
+  width: 200px;
+}
