--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,7 @@ body{
     .hide{
       background-color: black;
       overflow: hidden;
+      height: 20px;
       span{
         transform: translateY(100%);
         display: inline-block;
