--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,7 @@ body{
     font-size: 3rem;
     font-weight: 900;
     text-align: center;
+    height: 100px;
     .hide{
       background-color: black;
       overflow: hidden;
