--- a/src/App.scss
+++ b/src/App.scss
@@ -34,9 +34,10 @@ body{
   justify-content: center;
   .intro-text{
     color: #e3dde2;
-    font-size: 2rem;
-    font-weight: 900;
+    font-size: 3rem;
+    font-weight: 700;
     text-align: center;
+    line-height: 3.5rem;
     .hide{
       background-color: black;
       overflow: hidden;
